Fixed icons and logo which were not showing up

--- a/app/assets/stylesheets/audit_rails/twitter/_glyphicons.scss
+++ b/app/assets/stylesheets/audit_rails/twitter/_glyphicons.scss
@@ -11,9 +11,9 @@
 @font-face {
   font-family: 'Glyphicons Halflings';
   src: url(font-path('glyphicons-halflings-regular.eot') + "?#iefix") format('embedded-opentype'),
-       url(font-path('glyphicons-halflings-regular.woff')) format('woff'), 
-       url(font-path('glyphicons-halflings-regular.ttf'))  format('truetype'),
-       url(font-path('glyphicons-halflings-regular.svg') + "#glyphicons_halflingsregular") format('svg');
+       url(font-path('audit_rails/glyphicons-halflings-regular.woff')) format('woff'),
+       url(font-path('audit_rails/glyphicons-halflings-regular.ttf'))  format('truetype'),
+       url(font-path('audit_rails/glyphicons-halflings-regular.svg') + "#glyphicons_halflingsregular") format('svg');
 }
 
 // Catchall baseclass
