--- a/app/assets/stylesheets/audit_rails/twitter/_variables.scss
+++ b/app/assets/stylesheets/audit_rails/twitter/_variables.scss
@@ -67,7 +67,7 @@ $headings-color:          inherit !default;
 // Iconography
 // -------------------------
 
-$icon-font-path:          "../fonts/" !default;
+$icon-font-path:          "../audit_rails/fonts/" !default;
 $icon-font-name:          "glyphicons-halflings-regular" !default;
 
 
